# trengine

./: README.md  genindex.html  index.html  modules.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  trengine.html
.github/workflows/: check-ruff.yml  docs.yml  pypi-publish.yml
_modules/: index.html  trengine.html
_modules/trengine/: exceptions.html  google.html  hozory.html  identify_music.html  ocr.html  speech_to_text.html  tdict.html  text_to_speech.html  tr.html  types.html
_sources/: index.rst.txt  modules.rst.txt  trengine.rst.txt
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  trengine.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  trengine.html
examples/ajax/: async_example.py  sync_example.py
examples/google/: async_example.py  sync_example.py
examples/hozory/: async_example.py  sync_example.py
examples/identify_music/: async_example.py  sync_example.py
examples/ocr/: async_example.py  sync_example.py
examples/speech_to_text/: async_example.py  sync_example.py
examples/speechtotext/: async_example.py  sync_example.py
examples/tdict/: async_example.py  sync_example.py
examples/text_to_speech/: async_example.py  sync_example.py
examples/tr/: async_example.py  sync_example.py
trengine/: SpeechtoText.py  __init__.py  ajax.py  google.py  hozory.py  identify_music.py  ocr.py  speech_to_text.py  speechtotext.py  tdict.py  text_to_speech.py  tr.py  types.py
(+12 files in other folders)
