[project]
name = "trengine"
version = "1.4"
authors = [
  { name="ZAID", email="y8838@hotmail.com" },
]
description = "TREngine is python library based on 4 translators engines"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "aiohttp",
  "asyncio",
  "requests",
]

[project.urls]
Homepage = "https://github.com/zaid5o5/trengine"
Issues = "https://github.com/zaid5o5/trengine/issues"